# ChangeLog for x11-plugins/vicious
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*vicious-1.0.16 (29 Sep 2009)

  29 Sep 2009; James Rowe <jnrowe@gmail.com> +vicious-1.0.16.ebuild,
  +metadata.xml:
  Initial ebuild, by me.
