@@ -3,12 +3,13 @@ Hash: SHA1
 
 DIST vicious-1.0.16.tar.gz 23013 RMD160 8c1028ca3948c8d03598562bd3012885dd694a0b SHA1 14a8a9a9dfae050505170b184351fbdc7ce3825d SHA256 a2b1730bb0d2957208c4297b510f75ebfc685b9a37e6a54c619ef0efcfeb5570
 EBUILD vicious-1.0.16.ebuild 476 RMD160 d75a54b06a020bb62f63417b0198a082e6b3cdca SHA1 a5b25e3985359327c50938120f43715ae0b8fb1e SHA256 d72e23f0a5b91b90567e601a4bae924c22e3ca5d172de53fbd1e9b496820ee77
-MISC ChangeLog 263 RMD160 664b69a19d7e68a9f3eec6503e1bb85bf76794f6 SHA1 7dd8faa594364f40bdeb297f3e3e594ec802cfc0 SHA256 c732d3684a1b316992c63ddc1ca20a65b3ca1d93cd80f4981cf010ca390d379b
+EBUILD vicious-9999.ebuild 486 RMD160 8e1b3d12a3720040816b4c8983cd90e5826729d1 SHA1 ecfd4800d702f66f4e71ac8ba78c7f146bb9e160 SHA256 23d99ed95b6165da2012ca8b552ccefc11ca7a34a0a685a61dfaacbf1b1b8dae
+MISC ChangeLog 385 RMD160 ce4d9aad4f54f554d9000cb54b96a4ff6d7055cd SHA1 b15fa4ade96d3e616c8df08ba3af2d22e9524fd4 SHA256 0d33ac9a469c673bb1d324c5f7ca029fe08090892eb65da9f192ed58c7547f52
 MISC metadata.xml 805 RMD160 35692772202b00b5f8d9be8dca9f2903dedb4b07 SHA1 bca8b5372938f340af25f6246d4520ba357d0bbf SHA256 ff4cd73518b1a22098f38047b80021beae8f1dde2c96d12d8a519fcf5c0d2383
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.11 (GNU/Linux)
 
-iEYEARECAAYFAkrB8iIACgkQzJrj3cAXR0mDVgCgsobt7D0l2rZsXX82gQlGUUTB
-tgsAnR5Z8GXJ357gmDB2CpV4CQNeqfnE
-=lKmT
+iEYEARECAAYFAkrB9CkACgkQzJrj3cAXR0lqJACeMnfhWEDUqbihv16kyJf8NZlB
+AyAAniBahX51AEQCtQ13CxXnmzx2ivfD
+=Z7wD
 -----END PGP SIGNATURE-----
